--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,7 @@ api-version: '1.21'
 authors: [SimonDMC]
 description: Adds spyware to Minecraft
 website: simondmc.com
+
+commands:
+  eavesdrop:
+  msg:
